kubernetes/app001.yaml
# Yan Pan
# deployments, services, HPA(disabled)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-001
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-001
  template:
    metadata:
      labels:
        app: app-001
    spec:
      # nodeSelector:
      #   type: normal
      #   role: main
      containers:
      - name: app-001-container
        image: yyyaaan/mlopsint:latest
        command : ["uvicorn", "app:app", "--root-path", "/app001",  "--host", "0.0.0.0", "--port", "8101"]
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1250m"
            memory: "2048Mi"
        ports:
        - containerPort: 8101
        volumeMounts:
        - name: volume-mount-shared
          mountPath: /mnt/shared
      volumes:
      - name: volume-mount-shared
        hostPath: 
          path: /Users/pannnyan/Documents/DevGit/yyy-cluster/tmpmntdata
        # azureFile:
        #   secretName: file-share-secrets
        #   shareName: mlops
        #   readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: app-001
spec:
  type: ClusterIP
  selector:
    app: app-001
  ports:
  - name: http
    protocol: TCP
    port: 8101
    targetPort: 8101
# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: app-001
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: app-001
#   minReplicas: 1
#   maxReplicas: 5
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 60
# ---
