kubernetes/app002.yaml
# Yan Pan
# deployments, services, HPA(disabled)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-002
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-002
  template:
    metadata:
      labels:
        app: app-002
    spec:
      serviceAccountName: internal-service-account
      automountServiceAccountToken: true
      # nodeSelector:
      #   type: normal
      #   role: main
      containers:
      - name: app-002-container
        image: yyyaaan/fastapi001mongo:latest
        command : ["uvicorn", "main:app", "--root-path", "/app002", "--host", "0.0.0.0", "--port", "8201"]
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1250m"
            memory: "2048Mi"
        ports:
        - containerPort: 8201
        volumeMounts:
        - name: volume-mount-shared
          mountPath: /mnt/shared
      volumes:
      - name: volume-mount-shared
        hostPath: 
          path: /Users/pannnyan/Documents/DevGit/yyy-cluster/tmpmntdata
        # azureFile:
        #   secretName: file-share-secrets
        #   shareName: mlops
        #   readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: app-002
spec:
  type: ClusterIP
  selector:
    app: app-002
  ports:
  - name: http
    protocol: TCP
    port: 8201
    targetPort: 8201
