kubernetes/app_backend.yaml
# Yan Pan
# deployments, services, HPA(disabled)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-backend
  template:
    metadata:
      labels:
        app: app-backend
    spec:
      serviceAccountName: internal-service-account
      automountServiceAccountToken: true
      # nodeSelector:
      #   type: normal
      #   role: main
      containers:
      - name: app-backend-container
        image: yyyaaan/fastapps:latest
        command: ["uvicorn", "main:app", "--root-path", "/api", "--host", "0.0.0.0", "--port", "8001"]
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1250m"
            memory: "2048Mi"
        ports:
        - containerPort: 8201
        volumeMounts:
        - name: volume-mount-shared
          mountPath: /mnt/shared
      volumes:
      - name: volume-mount-shared
        # hostPath: 
        #   path: /Users/pannnyan/Documents/DevGit/yyy-cluster/tmpmntdata
        azureFile:
          secretName: file-share-secrets
          shareName: yandemoprjtestfileshare001
          readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: app-backend
spec:
  type: ClusterIP
  selector:
    app: app-backend
  ports:
  - name: http
    protocol: TCP
    port: 8001
    targetPort: 8001
