kubernetes/app_frontend.yaml
# Yan Pan
# deployments, services, HPA(disabled)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-frontend
  template:
    metadata:
      labels:
        app: app-frontend
    spec:
      # nodeSelector:
      #   type: normal
      #   role: main
      containers:
      - name: app-frontend-container
        image: yyyaaan/yanfivuejs:latest
        command: ["nginx", "-g", "daemon off;"]
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1250m"
            memory: "2048Mi"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: volume-mount-shared
          mountPath: /mnt/shared
      volumes:
      - name: volume-mount-shared
        # hostPath: 
        #   path: /Users/pannnyan/Documents/DevGit/yyy-cluster/tmpmntdata
        azureFile:
          secretName: file-share-secrets
          shareName: yandemoprjtestfileshare001
          readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: app-frontend
spec:
  type: ClusterIP
  selector:
    app: app-frontend
  ports:
  - name: http
    protocol: TCP
    port: 8002
    targetPort: 80
# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: app-frontend
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: app-frontend
#   minReplicas: 1
#   maxReplicas: 5
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 60
# ---
