kubernetes/appint.yaml
# Yan Pan
# deployments, services, HPA(disabled)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-int
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-int
  template:
    metadata:
      labels:
        app: app-int
    spec:
      serviceAccountName: internal-service-account
      automountServiceAccountToken: true
      nodeSelector:
        type: normal
        role: main
      containers:
      - name: app-int-container
        image: yyyaaan/mlopsint:latest
        command : ["uvicorn", "app:app", "--root-path", "/private", "--host", "0.0.0.0", "--port", "9101", "--workers", "3"]
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1250m"
            memory: "2048Mi"
        ports:
        - containerPort: 9101
      #   envFrom:
      #   - secretRef:
      #       name: app-secrets
        volumeMounts:
        - name: volume-mount-shared
          mountPath: /mnt/shared
      volumes:
      - name: volume-mount-shared
        # hostPath: 
        #   path: /Users/pannnyan/Documents/DevGit/mlops-engineering-task-yan/tmpmntdata
        azureFile:
          secretName: file-share-secrets
          shareName: mlops
          readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: app-int
spec:
  type: ClusterIP
  selector:
    app: app-int
  ports:
  - name: http
    protocol: TCP
    port: 9101
    targetPort: 9101
