kubernetes/appmlflow.yaml
# Yan Pan
# deployments, services, HPA(disabled)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-mlflow
  template:
    metadata:
      labels:
        app: app-mlflow
    spec:
      nodeSelector:
        type: normal
        role: main
      containers:
      - name: app-mlflow-container
        image: yyyaaan/mlflowserver:latest
        command : ["sh", "start_mlflow.sh"]
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1250m"
            memory: "2048Mi"
        ports:
        - containerPort: 9201
      #   envFrom:
      #   - secretRef:
      #       name: app-secrets
        volumeMounts:
        - name: volume-mount-shared
          mountPath: /mnt/shared
      volumes:
      - name: volume-mount-shared
        # hostPath: 
        #   path: /Users/pannnyan/Documents/DevGit/mlops-engineering-task-yan/tmpmntdata
        azureFile:
          secretName: file-share-secrets
          shareName: mlops
          readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: app-mlflow
spec:
  type: ClusterIP
  selector:
    app: app-mlflow
  ports:
  - name: http
    protocol: TCP
    port: 9201
    targetPort: 9201
