kubernetes/mongoexpress.yaml
# Yan Pan
# deployments, services, HPA(disabled)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      # nodeSelector:
      #   type: normal
      #   role: main
      containers:
      - name: mongo-express-container
        image: mongo-express
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "750m"
            memory: "2048Mi"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
spec:
  type: ClusterIP
  selector:
    app: mongo-express
  ports:
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 8081
