kubernetes/ingress.yaml
# Yan Pan
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.2/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yan-playground-ingress
  annotations:
    # cert-manager.io/issuer: "lets-encrypt-prod"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  # https://kubernetes.github.io/ingress-nginx/examples/rewrite/
  # tls:
  #   - secretName: lets-encrypt-tls
  #     hosts:
  #       - fqdn.fully.qualified.domain.name
  ingressClassName: nginx
  rules:
    # - host: localhost
    - http:
        paths:
          - path: /(|$)(.*)  # /
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-frontend
                port:
                  name: http
          - path: /api(/|$)(.*)  # /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-backend
                port:
                  name: http
