kubernetes/ingress_rules.yaml
# https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
# https://kubernetes.github.io/ingress-nginx/examples/rewrite/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yan-playground-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "lets-encrypt-prod"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - secretName: lets-encrypt-tls
      hosts:
        - yan-demo-prj-test-services-001.westeurope.cloudapp.azure.com
  ingressClassName: nginx
  rules:
    - host: yan-demo-prj-test-services-001.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /(|$)(.*)  # /
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-frontend
                port:
                  name: http
          - path: /api(/|$)(.*)  # /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-backend
                port:
                  name: http
